feat: Enhance validation framework with EmailValidator and improvements
- Added EmailValidator class for validating email addresses with comprehensive checks.
- Updated Validator and SimpleValidator to support model and field parameters in isDisabled and getErrors methods.
- Introduced enable/disable functionality in Validation class to control validation state.
- Updated ValidatorSetup and SimpleValidatorSetup to include model and key parameters.
- Refactored tests to use Vitest instead of Jest for consistency across the project.
- Bumped version to 2.2.0 and updated package.json scripts accordingly.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "thesimplevalidation",
   "description": "The simple validation",
-  "version": "2.1.0",
+  "version": "2.2.0",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
@@ -9,7 +9,9 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "jest"
+    "test": "vitest",
+    "test:run": "vitest run",
+    "coverage": "vitest run --coverage"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
@@ -35,9 +37,8 @@
   "devDependencies": {
     "@types/lodash.get": "4.4.9",
     "@types/lodash.isequal": "4.5.8",
-    "@types/jest": "30.0.0",
+    "@vitest/coverage-v8": "^4.0.9",
     "typescript": "5.9.3",
-    "jest": "30.2.0",
-    "ts-jest": "29.4.5"
+    "vitest": "4.0.9"
   }
 }
